[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Battle/Attacks/Bullets/GasterBlaster/GasterBlaster.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Battle/Bullets/GasterBlaster/3.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Battle/Bullets/GasterBlaster/4.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Battle/Bullets/GasterBlaster/2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Battle/Bullets/GasterBlaster/0.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Battle/Bullets/GasterBlaster/1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Battle/Bullets/GasterBlaster/5.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 8, 8 )

[node name="GasterBlaster" type="Node2D" groups=["Bullet", "GasterBlaster"]]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="OnScreen" type="VisibilityNotifier2D" parent="Sprite"]
rect = Rect2( -32, -24, 64, 48 )

[node name="LaserTop" type="ColorRect" parent="."]
visible = false
margin_left = 32.0
margin_top = -8.0
margin_right = 48.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaserTop2" type="ColorRect" parent="."]
visible = false
margin_left = 32.0
margin_top = -8.0
margin_right = 48.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Laser" type="ColorRect" parent="."]
visible = false
margin_left = 32.0
margin_top = -8.0
margin_right = 48.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaserHitBox" type="ColorRect" parent="."]
visible = false
margin_left = 32.0
margin_top = -8.0
margin_right = 48.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitBox" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 40, 0 )
shape = SubResource( 2 )
disabled = true

[node name="Timer" type="Timer" parent="."]
